style.css
/* by default mobile html should not be displayed */
.mobile {
    display: none;
}

/* reset body to defualt */
body * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none; 
    color: white;
}



body {
    font-family: 'Coolvetica', sans-serif;
    height: 100%;
    background-color: black;
    color: white;
}

/* Navigation bar */
nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: black;
    padding: 2vh 1vw; 
    top: 0;
    z-index: 1000;
}

/* Navigation list */
.nav_list {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
}

/* Navigation list items */
.nav_list ul {
    display: flex;
    list-style: none;
    justify-content: center;
    flex-grow: 1; 
    font-size: 2vw;
}

/* Navigation list items */
.nav_list li {
    margin: 0 1.5vw; 
    
}

/* Navigation list links */
.nav_list a {
    padding: 10px 20px 10px 20px;
    border-radius: 15px;
    transition: outline 0.3s ease-in-out;
    
}

/* Navigation active page */
.active-page{
    color: red;
}

/* Navigation item hover */
.nav_list a:hover {
    outline: 3px solid white;
}


/* Logo upper left */
.logo {
    font-size: 3vw;  
}



header {
    display: flex;
    flex-direction: column;
    align-items: flex-start; 
    justify-content: flex-start;
    padding: 3vh 10vw;
    text-align: left;
}

/* Title */
.titles {
    display: flex;
    flex-direction: column;
    align-items: flex-start; 
}


.titles h1 {
    font-size: 7vw;
    margin: 0; 
    padding: 0px 20px; 
}


/*extra styling for h2*/
.titles h2 {
    font-size: 11vw; 
    font-size: 11vw; 
    padding: 20px;
    outline: 3px solid white;
    border-radius: 40px;
    width: fit-content;
    margin: 0; 
    padding: 0px 20px; 
    margin: 0; 
    padding: 0px 20px; 

}

/*red dot h2*/
.titles h2 span, .logo span {
    color: red;
}

.carousel-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
    position: relative;
    
}
.carousel {
    position: relative;
    height: 60vh;
    width: 80vw;
    outline: white 3px solid;
    border-radius: 40px;
    
}

.carousel-item {
    width: 100%;
    height: 100%;
    position: absolute;
    inset: 0;
    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
}

.carousel-item h1 {
    position: absolute;
    top: 20%;
    left: 5%;
    transform: translate(0, -50%);
    font-size: 3vw;
    color: white;
    z-index: 2;
}   

.carousel-item p {
    position: absolute;
    top: 35%;
    left: 5%;
    width: 40%;
    transform: translate(0, -50%);
    font-size: 1vw;
    color: white;
    z-index: 2;
}

.carousel-item button {
    position: absolute;
    top: 50%;
    left: 5%;
    transform: translate(0, -50%);
    font-size: 1vw;
    color: white;
    z-index: 2;
    background-color: red;
    border: none;
    padding: 10px 20px;
    border-radius: 20px;
    cursor: pointer;
}

.carousel-item img {
    width: 40%;
    height: 60%;
    position: absolute;
    right: 10%;
    top: 50%;
    transform: translate(0, -50%);
}

    
   

.carousel-button-prev,
.carousel-button-next {
    position: absolute;
    background:none;
    border: none;
    top: 50%;
    z-index: 2;
    font-size: 4rem;
    transform: translateY(-50%);
    cursor: pointer;
    border-radius: 20px;
    right: 3%;
}

button i {
    
    color: red;
    
}

.carousel-button-prev {
    top: 40%;

}

.carousel-button-next {
    top: 60%;
    
}

.carousel-button-prev:hover {
    transform: translateY(-5px), ease;
}

.carousel-button-next:hover {
    transform: translateY(5px), ease;
    
}




/* smaller Desktop view (tablet) */
@media screen and (max-width: 920px){
    body {
        height: 100vh;
        overflow-x: hidden;
    }
    .mobile {
        display: none;
    }
    .desktop {
        display: block;
    }
    .nav_list ul {
        display: flex;
        list-style: none;
        justify-content: center;
        flex-grow: 0; 
        font-size: 2vw;
    }
    .nav_list li {
        margin: 0 2vw; 
    }

    header {
        font-size: 3vh;
        height: auto;
      
        padding-bottom: 10vh; 
        position: relative; 
    }


}


  

/* Mobile view */
@media screen and (max-width: 770px) {
    body {
        height: 100vh;
        overflow-x: hidden; 
    }

    .desktop {
        display: none;
    }

    .mobile {
        display: block;
    }

    header {
        font-size: 3vh;
        height: auto;
        padding-top: 15vh; 
        padding-bottom: 10vh; 
        position: relative;
        padding-top: 15vh; 
        padding-bottom: 10vh; 
        position: relative;

    h1 {
        display: none;
    }

    .titles {
        position: absolute;
        top: 25vh; 
        left: 5%; 
        transform: translate(0%, -50%); 
        top: 25vh; 
        left: 5%; 
        transform: translate(0%, -50%); 
    }

    .titles h2 {
        font-size: 20vw;
        outline: none;
        padding: 0;
        text-align: left; 
        text-align: left; 
    }

    nav{
        top: 70vh;
    }
    .nav_list {
        position: absolute;
        width: 100%; 
        background-color: black; 
        top: 65%; 
        transform: translateY(-50%); 
        width: 100%; 
        background-color: black; 
        top: 65%; 
        transform: translateY(-50%); 
        
    }

    .nav_list ul {
        display: block;
        position: relative;
        list-style: none;
        justify-content: center;
        font-size: 7vw;
        text-align: left;
        
    }

    .nav_list li {
        margin: 0 0px; 
        margin: 0 0px; 
    }

    .nav_list a {
        position: relative;
        transition: none;
        transition: none;
        
        top: -4vh;
    }

    .nav_list a:hover {
        outline: none;
        outline: none;
        color: red;
        transition: left 0.3s ease-in-out;
        transition: left 0.3s ease-in-out;

    }



}






}

